--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sterilizing-pear-2",
+  "name": "heroscape-calculator",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,14 +10,13 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@google/genai": "^1.39.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.7.2",
+    "typescript": "~5.6.2",
     "vite": "^6.0.5"
   }
 }
